@@ -1,3 +1,7 @@
+2011-02-11  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed issue #17552: htmlArea RTE: Delete deprecated class HTMLArea.Dialog
+
 2011-02-07  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* htmlArea RTE: Updated Manual
