@@ -1,3 +1,7 @@
+2011-02-11  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed issue #17552: htmlArea RTE: Delete deprecated class HTMLArea.Dialog
+
 2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #15721: Memcache::delete() without timeout param causes loss of memcache server in pool (Thanks to Michiel Ross)
